--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -37,7 +37,13 @@
         <td><%= school.role %></td>
         <td><%= link_to school.studentclasses.first ? school.studentclasses.first.cls.class_name : "Nil", display_class_school_student_path(@school,school,:class_id =>school.studentclasses.first ? school.studentclasses.first.cls.id : '')%></td>
         <td>
-        <%= link_to "contactParent", new_school_parent_path(@school)%>
+        <%#= link_to "ContactParent", new_school_parent_path(@school), :class => "btn btn-primary"%>
+        <% @parentuser = Parentuser.find_by_user_id(school.id) %>
+        <% if  @parentuser.blank? %>
+        <%= link_to 'ContactParent', '#new_person_modal', 'data-toggle' => 'modal', :class => "btn btn-primary" %>
+<% else %>
+<p>Assigend the Parent</p>
+<% end %>
           <% if school.reset_password_token == nil %>
             <%= link_to "View Posts", posts_school_student_path(@school, school),:class=>"btn btn-primary"%> |
           <% end %>
@@ -77,3 +83,57 @@
     vertical-align: top;
   }
 </style>
+
+<div class="modal fade" id="new_person_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Send Invitation To Parent</h4>
+      </div>
+      <div class="modal-body">
+        <%# Render the new person form (passing modal => true to enable remote => true) %>
+       <%#=  link_to "asdf", new_school_parent_path(@school), :class => "special_button"%>
+   <%= form_for(@parent, :url => school_parents_path(@school, :id => school.id),:html => {:id => "commentForm"}) do |f| %>
+    <table>
+      <tr>
+        <td valign="top">First Name:</td>
+        <td><%= f.text_field :first_name, :class => 'required', :id => "cfame"%></td>
+      </tr>
+      <tr>
+        <td valign="top">Last Name:</td>
+        <td><%= f.text_field :last_name, :class => 'required', :id => "clame"%></td>
+      </tr>
+      <tr>
+        <td valign="top">Email:</td>
+        <td><%= f.text_field :email, :class => 'text required email', :id => "inputEmail" %></td>
+        <td><%= validation_error(@parent.errors["email"])%></td>
+      </tr>
+      <tr>
+    <!--  <td valign="top">Student Name:</td>  -->
+        <td><%#= select_tag :user_id,  options_for_select([["Select", ""]] + User.where("school_admin_id = #{current_school_admin.id}", "role = #{"student"} ").map{|ic| [ic.first_name,ic.id]}) %>
+         <%#= select_tag :user_id,  options_for_select([["Select", ""]] + User.where(role: "student").map{|ic| [ic.first_name,ic.id]}) %>
+         <%= hidden_field_tag :user_id %></td>
+         <%= school.first_name %>
+
+            <%= school.id %>    
+      </tr>
+      <tr>
+        <td></td>
+        <td><%= f.submit "Send Invitation", :class => 'btn'%></td>
+      </tr>
+    </table>
+  <% end %>
+      </div>
+
+     
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  $("#commentForm").validate();
+</script>
